# jellyfin-client-rs

./: Cargo.toml
src/: error.rs  lib.rs  model.rs  request_builder.rs
