[package]
name = "jellyfin-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.2"
tracing = "0.1"
futures = "0.3"
hostname = "0.3.1"
uuid = { version = "0.8", features = ["v4"] }